[Feat] User Profile & update docs
